--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "puppeteer-test",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "Puppeteer.js",
   "scripts": {
+    "start": "node Puppeteer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,3 +16,4 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
+
